brat/test/golden/error/arith_implicit_conversion.brat
f(Int, Float) -> Int
f(x, y) = x + (x * y)
