brat/test/golden/error/arith_implicit_conversion.brat.golden
Error in test/golden/error/arith_implicit_conversion.brat on line 2:
f(x, y) = x + (x * y)
                   ^

  Type mismatch when checking y
Expected: (right :: Int)
But got:  (y :: Float)


